---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 6/12/25
  Major Features:
    - Spidertrons and the Sentient Spider can now deliver items between hex cores or other inventories.
    - Added a full-featured trade loop finder as a quest reward from Gleba.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 6/12/25
  Major Features:
    - Added the electromagnetic penetrator handheld weapon.
  Minor Features:
    - Added the "ping in chat" button for trades in the trade overview.
    - Added mod settings for tweaking trade productivity requirements for ranking up items.
    - Added mod settings for scaling dungeon chest loot value.
  Changes:
    - The Sentient Spider is now equipped with six electromagnetic penetrators instead of one (buffed) teslagun.
    - Changed Sentient Spider recipe to reflect its new abilities.
    - Recalculated item values on Aquilo and Fulgora.
    - Clicking an item in a trade while a hex core is open now opens the trade overview instead of the catalog.
    - Dungeon hexes no longer contribute to the total trades found, preventing from quickly completing the "Find Some Trades" quest.
    - Removed the map colors of hexlights and hexports.
    - The item selector for trade contents in the trade overview now only shows items that can be found in trades.
    - Made the tooltips for the sink and generator buttons more concise.
    - Due to game engine performance issues on saves with thousands of trades showing in the trade overview, the maximum is now 250 total trades to be shown.
        This does not affect filtering or which trades are searched; it only keeps you from lagging the game with more UI elements than you could ever need.
    - Increased Sentient Spider equipment grid size from 12x10 to 12x12.
  Gui:
    - Horizontally centered the "Bonuses" text in the catalog.
  Bugfixes: